# asierrayk.github.io

./: .gitignore  .gitmodules  404.html  README.md  about.html  archives.html  authors.html  categories.html  chuleta-restructuredtext.html  como-suscribirse-al-blog.html  day-of-week-tutorial.html  demostrando-por-induccion.html  dev_elegant.sh  el-problema-que-gauss-resolvio-al-instante.html  elegant.sh  index.html  la-banca-siempre-gana.html  landing-page-about-hidden.html  my-first-vim-plugin.html  my-super-post.html  objetos-mutables-en-python.html  pelicanconf.py  publishconf.py  pyproject.toml  python-mutable-objects.html  requirements.txt  search.html  sistema-mayor.html  tags.html  tipuesearch_content.js  tutorial-resolver-cubo-a-ciegas.html
author/: alexis-metaireau.html  asier-cardoso-sanchez.html  conan-doyle.html
category/: blog.html  matematicas.html  memoria.html  programacion.html  rubik.html  yeah.html
drafts/: chuleta-markdown.html  chuleta-restructuredtext.html  como-suscribirse-al-blog.html  demostrando-por-induccion.html  el-problema-que-gauss-resolvio-al-instante.html  la-banca-siempre-gana.html  sistema-major.html  sistema-mayor.html
en/: 404.html  archives.html  categories.html  chuleta-restructuredtext.html  index.html  landing-page-about-hidden.html  my-first-vim-plugin.html  my-super-post.html  python-mutable-objects.html  search.html  sistema-mayor.html  tags.html  tipuesearch_content.js  tutorial-resolver-cubo-a-ciegas.html
extra/: custom.css
feeds/: all.atom.xml  blog.atom.xml  matematicas.atom.xml  memoria.atom.xml  rubik.atom.xml  (+2 more)
(+95 files in other folders)
